--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     
     <label class="custom-field">
       <input type="text" placeholder=" "/>
-      <span class="placeholder">Enter Text</span>
+      <span class="placeholder">First Name</span>
     </label>
   
   </p> 
