--- a/index2.html
+++ b/index2.html
@@ -52,7 +52,7 @@
             font-size: 0.825em;
             transition-duration: 300ms;
         }
-
+/*
         button {
             padding: 15px 0px;
             margin-top: 20px;
@@ -67,7 +67,7 @@
         input:not(:placeholder-shown)+span {
             color: purple;
             transform: translateY(0px);
-        }
+        } */
     </style>
 </head>
 <html>
@@ -77,15 +77,15 @@
     <div class="register">
         <form>
             <label for="name">
-                <input type="text" id="name" placeholder="Name">
+                <input type="text" id="name" placeholder="Name2">
                 <span>Name</span>
             </label>
             <label for="email">
-                <input type="email" id="email" placeholder="Email">
+                <input type="email" id="email" placeholder="Email2">
                 <span>Email</span>
             </label>
             <label for="phone">
-                <input type="text" id="phone" placeholder="Phone">
+                <input type="text" id="phone" placeholder="Phone2">
                 <span>Phone</span>
             </label>
             <button type="button">Register</button>
