--- a/sandbox/table.html
+++ b/sandbox/table.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="../css/button.css">
     <link rel="stylesheet" href="../css/table.css">
     <link rel="stylesheet" href="../css/input.css">
-
-
 </head>
 <html>
 
@@ -27,51 +25,59 @@
 
     <div class="main-content">
         <br><br><br>
-        <div class="control-section cs-darker-bg">
-            <label class="control-section-title">Data Region Specification</label>
-            <div class="control-row">
-                <label class="float-up">
-                    <input type="text" placeholder="&nbsp;" />
-                    <span>Name</span>
-                </label>
-            </div>
-            <div class="control-row">
-                <label class="float-up">
-                    <input type="text" placeholder="&nbsp;" />
-                    <span>Crawled Url</span>
-                </label>
-                <input type="button" class="btn btn-primary" value="Advice">
-            </div>
-            <div class="control-row">
 
-                <label class="float-up">
-                    <input type="text" placeholder="&nbsp;" />
-                    <span>Region Selector</span>
-                </label>
-            </div>
+        <div class="control-section">
+            <label class="control-section-title">Informative Table</label>
             <div class="control-row">
-                <label class="float-up">
-                    <input type="text" placeholder="&nbsp;" />
-                    <span>Next Page Selector</span>
-                </label>
-            </div>
-            <div class="control-row">
-                <label class="float-up">
-                    <input type="text" placeholder="&nbsp;" />
-                    <span>Description</span>
-                </label>
-
+                <table class="col-6">
+                    <tr>
+                        <th>Company</th>
+                        <th>Contact</th>
+                        <th>Country</th>
+                    </tr>
+                    <tr>
+                        <td>Alfreds Futterkiste</td>
+                        <td>Maria Anders</td>
+                        <td>Germany</td>
+                    </tr>
+                    <tr>
+                        <td>Centro comercial Moctezuma</td>
+                        <td>Francisco Chang</td>
+                        <td>Mexico</td>
+                    </tr>
+                    <tr>
+                        <td>Ernst Handel</td>
+                        <td>Roland Mendel</td>
+                        <td>Austria</td>
+                    </tr>
+                    <tr>
+                        <td>Island Trading</td>
+                        <td>Helen Bennett</td>
+                        <td>UK</td>
+                    </tr>
+                    <tr>
+                        <td>Laughing Bacchus Winecellars</td>
+                        <td>Yoshi Tannamuri</td>
+                        <td>Canada</td>
+                    </tr>
+                    <tr>
+                        <td>Magazzini Alimentari Riuniti</td>
+                        <td>Giovanni Rovelli</td>
+                        <td>Italy</td>
+                    </tr>
+                </table>
             </div>
         </div>
 
+
         <div class="control-section">
-            <label class="control-section-title">Record Specification</label>
+            <label class="control-section-title">Editable Table</label>
             <div class="control-row">
                 <table class="col-6">
                     <tr>
                         <th class="col-2">Cell Name</th>
                         <th class="col-6">Cell Selector</th>
-                        <th >Action</th>
+                        <th>Action</th>
                     </tr>
                     <tr>
                         <td><input type="text" placeholder="&nbsp;" /></td>
@@ -88,17 +94,10 @@
                         <td><input type="text" placeholder="&nbsp;" /></td>
                         <td><input type="button" class="btn btn-small" value="Remove"></td>
                     </tr>
-                </table>                
+                </table>
             </div>
         </div>
 
-        <div class="control-section">            
-            <div class="control-row">
-                <input type="button" class="btn btn-primary mrg-left-10"  value="Preview"dis >
-                <input type="button" class="btn btn-primary mrg-left-10" value="Save">
-                <input type="button" class="btn" value="Cancel">
-            </div>
-        </div>        
     </div>
 
 
