--- a/index.html
+++ b/index.html
@@ -95,7 +95,14 @@
  
     
     <label class="float-up">
-      <input type="text" placeholder="&nbsp;" />
+      <input type="text" class="inpt-shadowed" placeholder="&nbsp;" />
+      <span >Enter Text</span>
+    </label>
+
+    <br>
+
+    <label class="float-up">
+      <input type="text" class="inpt-underlined" placeholder="&nbsp;" />
       <span >Enter Text</span>
     </label>
   
