--- a/sandbox/table.html
+++ b/sandbox/table.html
@@ -98,6 +98,34 @@
             </div>
         </div>
 
+        <div class="control-section">
+            <label class="control-section-title">Editable Table 2</label>
+            <div class="control-row">
+                <table class="col-6">
+                    <tr>
+                        <th class="col-2">Cell Name</th>
+                        <th class="col-6">Cell Selector</th>
+                        <th>Action</th>
+                    </tr>
+                    <tr>
+                        <td><input type="text" class="inpt-underlined" placeholder="&nbsp;" /></td>
+                        <td><input type="text" class="inpt-underlined" placeholder="&nbsp;" /></td>
+                        <td><input type="button" class="btn btn-small" value="Remove"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" class="inpt-underlined" placeholder="&nbsp;" /></td>
+                        <td><input type="text" class="inpt-underlined" placeholder="&nbsp;" /></td>
+                        <td><input type="button" class="btn btn-small" value="Remove"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" class="inpt-underlined" placeholder="&nbsp;" /></td>
+                        <td><input type="text" class="inpt-underlined" placeholder="&nbsp;" /></td>
+                        <td><input type="button" class="btn btn-small" value="Remove"></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+
     </div>
 
 
