--- a/sandbox/parser.html
+++ b/sandbox/parser.html
@@ -15,6 +15,7 @@
 
     <div class="navbar">
         <ul>
+            <li><img src="../img/logo.svg" width="50" height="50" > </li>
             <li><a href="#text">Text</a></li>
             <li><a href="#button">Button</a></li>
             <li><a href="#table">Table</a></li>
