--- a/sandbox/table.html
+++ b/sandbox/table.html
@@ -6,6 +6,19 @@
     <link rel="stylesheet" href="../css/button.css">
     <link rel="stylesheet" href="../css/table.css">
     <link rel="stylesheet" href="../css/input.css">
+    <style>
+        .dot-trim {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            width: 200px;
+        }
+
+        .list-selector {
+
+        }
+          
+    </style>
 </head>
 <html>
 
@@ -29,10 +42,10 @@
         <div class="control-section">
             <label class="control-section-title">Informative Table</label>
             <div class="control-row">
-                <table class="col-6">
+                <table >
                     <tr>
-                        <th>Company</th>
-                        <th>Contact</th>
+                        <th class="col-2">Company</th>
+                        <th class="col-6">Contact</th>
                         <th>Country</th>
                     </tr>
                     <tr>
@@ -42,7 +55,7 @@
                     </tr>
                     <tr>
                         <td>Centro comercial Moctezuma</td>
-                        <td>Francisco Chang</td>
+                        <td><div class="dot-trim">//html/body/div/div[@class='css-50cyfj']/div[@class='css-176aais']/form/div[@class='css-1d90tha']/div[@class='listing-grid-container css-1ox3k2t']/div[@class='css-14fnihb']/div[@class='css-19ucd76']</div></td>
                         <td>Mexico</td>
                     </tr>
                     <tr>
