--- a/sandbox/table_4.html
+++ b/sandbox/table_4.html
@@ -36,18 +36,18 @@
             width: 250px;
         }
 
-        tr:not(:first-child) {
+        tbody > tr {
             background-color: var(--color-10);
             box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
             font-size: 0.8em;
         }
 
-        tr:first-child {
+        thead > tr {
             color: var(--color-10);
             background-color: var(--tbl-head-color);
         }
 
-        tr:not(:first-child):hover {
+        tbody > tr:hover {
             background-color: var(--tbl-hover-bg);
         }
 
@@ -133,12 +133,15 @@
                         </span>
                         </span> 
                     </caption>
+                    <thead>
                     <tr>
                         <th >Name</th>
                         <th class="col-5">Description</th>
                         <th class="col-5">Url</th>
                         <th >Action</th>
                     </tr>
+                    </thead>
+                    <tbody>
                     <tr>
                         <td>ukr.net</td>
                         <td></td>
@@ -163,7 +166,7 @@
                             <input type="button" class="btn btn-small" value="Remove" />
                         </td>
                     </tr>
-
+                </tbody>
                 </table>
             </div>
         </div>
